# MixaByk1996-mattermost

./: .gitkeep  Mikhail_Byk_PHP_Developer.txt  resume.rtf
groupbuy-bot/: .env.example  docker-compose.yml
groupbuy-bot/adapters/mattermost/: Dockerfile
groupbuy-bot/bot/: config.py
groupbuy-bot/bot/dialogs/: registration.py
groupbuy-bot/bot/handlers/: procurement_commands.py
groupbuy-bot/core-rust/migrations/: 002_fix_user_sessions_unique.sql
groupbuy-bot/docs/: deployment.md  mattermost-deployment.md
groupbuy-bot/tests/: conftest.py
mattermost-master/: README.md  docker-compose.yml
mattermost-master/docs/: groupbuy-bot-installation.md
mattermost-master/groupbuy-bot/: .gitignore  README.md  docker-compose.prod.yml  docker-compose.two-server.yml  docker-compose.with-mattermost.yml
mattermost-master/groupbuy-bot/bot/: Dockerfile  api_client.py  main.py  message_processor.py  requirements.txt
mattermost-master/groupbuy-bot/core/: Dockerfile  requirements.txt
mattermost-master/groupbuy-bot/core-rust/: Cargo.toml  Dockerfile
mattermost-master/groupbuy-bot/core-rust/migrations/: 001_initial.sql
mattermost-master/groupbuy-bot/core-rust/src/: main.rs
mattermost-master/groupbuy-bot/core-rust/src/handlers/: chat.rs  mod.rs  payments.rs  procurements.rs  users.rs  websocket.rs
mattermost-master/groupbuy-bot/core-rust/src/models/: chat.rs  mod.rs  payment.rs  procurement.rs  user.rs
mattermost-master/groupbuy-bot/tests/: test_core_api.py  (+1 more)
mattermost-master/groupbuy-bot/wasm-utils/: Cargo.toml
mattermost-master/groupbuy-bot/wasm-utils/src/: lib.rs
(+73 files in other folders)
