[package]
name = "groupbuy-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
] }
rust_decimal = { version = "1", features = ["serde-with-str"] }

[profile.release]
opt-level = "s"
lto = true
